@@ -2311,6 +2311,11 @@ symbols prg
 <p>
 
 <p>
+Debugger loads the symbols automatically for currently running Atari
+program when entering the debugger, if no CPU symbols are yet loaded.
+</p>
+
+<p>
 The options you need to add suitable symbol table to your programs,
 depend on which toolchain you use to build it:
 </p>
